new configuration options (Salieri)

--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -5,6 +5,7 @@
 	--spicy-checkbox-color: #6B6D6E;
     --spicy-checkbox-color-checked: #ffffff;
 	--spicy-checkmark-color: #8C0809;
+    --spicy-checkbox-color-focus: #cf1818;
     --spicy-left-bar-derived-name-text-color: #191813;
     --spicy-left-bar-derived-value-text-color: #191813;
     --spicy-left-bar-derived-modifier-text-color: #191813;
