Small fix to make the running die work.

--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -89,7 +89,7 @@
     <div class="spicyClass-derived-value">
         <input type="text" value="{{data.data.stats.speed.adjusted}}" data-dtype="Number"
                 placeholder="{{ localize 'SWADE.Pace' }}" disabled/>
-        <button type="button" class="spicyClass-running-die"
+        <button type="button" class="spicyClass-running-die running-die"
                 title="{{localize 'SWADE.Roll'}} {{localize 'SWADE.RunningDie'}}"
                 style="background-image: url(systems/swade/assets/official/dice/d{{data.data.stats.speed.runningDie}}.svg);">
             <span class="sr-only">d{{data.stats.speed.runningDie}} {{localize 'SWADE.RunningDie'}}</span>
