Added a template for the sheet main bdy

--- a/swade-spices/templates/spicySheet.html
+++ b/swade-spices/templates/spicySheet.html
@@ -1,5 +1,5 @@
 <form class="spicyClass-grid-container" autocomplete="off">
     <div class="spicyClass-left-bar">{{>"modules/swade-spices/templates/leftBar.html" }}</div>
     <div class="spicyClass-top-bar">{{>"modules/swade-spices/templates/topBar.html" }}</div>
-    <div class="spicyClass-main-body">CCCCC</div>
+    <div class="spicyClass-main-body">{{>"modules/swade-spices/templates/mainBody.html"}}</div>
 </form>
