Basic tab functionality

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -1,3 +1,18 @@
-<p>
-    Main Body
-</p>
+<nav class="tabs">
+    <a class="item" data-tab="summary">Summary</a>
+    <a class="item" data-tab="tab2">Tab2</a>
+    <a class="item" data-tab="tab3">Tab3</a>
+</nav>
+<main class="sheet-body">
+    <section class="tab active" data-tab="summary">
+        Body of Summary tab
+    </section>
+    <section class="tab" data-tab="tab2">
+        Body of Tab 2
+    </section>
+    <section class="tab" data-tab="tab3">
+        Body of the third tab
+        Body of the third tab
+        Body of the third tab
+    </section>
+</main>
