Basic tab functionality

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -1,7 +1,7 @@
 <nav class="tabs">
-    <a class="item" data-tab="summary">Summary</a>
-    <a class="item" data-tab="tab2">Tab2</a>
-    <a class="item" data-tab="tab3">Tab3</a>
+    <a data-tab="summary">Summary</a>
+    <a data-tab="tab2">Tab2</a>
+    <a data-tab="tab3">Tab3</a>
 </nav>
 <main class="sheet-body">
     <section class="tab active" data-tab="summary">
