--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -1,18 +1,40 @@
 <nav class="tabs">
-    <a data-tab="summary">Summary</a>
-    <a data-tab="tab2">Tab2</a>
-    <a data-tab="tab3">Tab3</a>
+    <a data-tab="summary">{{localize "SWADESPICE.Summary"}}</a>
+    <a data-tab="traits">{{localize "SWADESPICE.Traits"}}</a>
+    <a data-tab="edges">{{localize "SWADESPICE.Edges"}}</a>
+    <a data-tab="hindrances">{{localize "SWADESPICE.Hindrances"}}</a>
+    <a data-tab="abilities">{{localize "SWADESPICE.Abilities"}}</a>
+    <a data-tab="inventory">{{localize "SWADESPICE.Inventory"}}</a>
+    <a data-tab="powers">{{localize "SWADESPICE.Powers"}}</a>
+    <a data-tab="effects">{{localize "SWADESPICE.Effects"}}</a>
+    <a data-tab="description">{{localize "SWADESPICE.Description"}}</a>
 </nav>
 <main class="sheet-body">
-    <section class="tab active" data-tab="summary">
+    <section class="tab-active" data-tab="summary">
         Body of Summary tab
     </section>
-    <section class="tab" data-tab="tab2">
-        Body of Tab 2
+    <section class="tab" data-tab="traits">
+        Body of traits tab
     </section>
-    <section class="tab" data-tab="tab3">
-        Body of the third tab
-        Body of the third tab
-        Body of the third tab
+    <section class="tab" data-tab="edges">
+        Body of the edges tab
+    </section>
+    <section class="tab" data-tab="hindrances">
+        Body of the hindrances tab
+    </section>
+    <section class="tab" data-tab="abilities">
+        Body of the abilities tab
+    </section>
+    <section class="tab" data-tab="inventory">
+        Body of the inventory tab
+    </section>
+    <section class="tab" data-tab="powers">
+        Body of the powers tab
+    </section>
+    <section class="tab" data-tab="effects">
+        Body of the effects tab
+    </section>
+    <section class="tab" data-tab="description">
+        Body of the description tab
     </section>
 </main>
