renamed summary to quick access (salieri)

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -1,5 +1,5 @@
 <nav class="tabs">
-    <a data-tab="summary">{{localize "SWADESPICE.Summary"}}</a>
+    <a data-tab="quick_access">{{localize "SWADESPICE.QuickAccess"}}</a>
     <a data-tab="traits">{{localize "SWADESPICE.Traits"}}</a>
     <a data-tab="edges">{{localize "SWADESPICE.Edges"}}</a>
     <a data-tab="hindrances">{{localize "SWADESPICE.Hindrances"}}</a>
@@ -10,8 +10,8 @@
     <a data-tab="description">{{localize "SWADESPICE.Description"}}</a>
 </nav>
 <main class="sheet-body">
-    <section class="tab-active" data-tab="summary">
-        Body of Summary tab
+    <section class="tab-active" data-tab="quick_access">
+        Body of Quick Access tab
     </section>
     <section class="tab" data-tab="traits">
         Body of traits tab
