Floating, icon-based, navbars.

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -1,40 +1,49 @@
-<nav class="tabs">
-    <a data-tab="quick_access">{{localize "SWADESPICE.QuickAccess"}}</a>
-    <a data-tab="traits">{{localize "SWADESPICE.Traits"}}</a>
-    <a data-tab="edges">{{localize "SWADESPICE.Edges"}}</a>
-    <a data-tab="hindrances">{{localize "SWADESPICE.Hindrances"}}</a>
-    <a data-tab="abilities">{{localize "SWADESPICE.Abilities"}}</a>
-    <a data-tab="inventory">{{localize "SWADESPICE.Inventory"}}</a>
-    <a data-tab="powers">{{localize "SWADESPICE.Powers"}}</a>
-    <a data-tab="effects">{{localize "SWADESPICE.Effects"}}</a>
-    <a data-tab="description">{{localize "SWADESPICE.Description"}}</a>
+<nav class="tabs spicyClass-navbar">
+    <a data-tab="summary" class="spicyClass-icon spicyClass-icon-summary"
+       title="{{localize "SWADESPICE.QuickAccess"}}"></a>
+    <a data-tab="traits" class="spicyClass-icon spicyClass-icon-trait"
+       title="{{localize "SWADESPICE.Traits"}}"></a>
+    <a data-tab="edges" class="spicyClass-icon spicyClass-icon-edges"
+       title="{{localize "SWADESPICE.Edges"}}"></a>
+    <a data-tab="hindrances" class="spicyClass-icon spicyClass-icon-hindrance"
+        title="{{localize "SWADESPICE.Hindrances"}}"></a>
+    <a data-tab="abilities" class="spicyClass-icon spicyClass-icon-abilities"
+       title="{{localize "SWADESPICE.Abilities"}}"></a>
+    <a data-tab="inventory" class="spicyClass-icon spicyClass-icon-inventory"
+       title="{{localize "SWADESPICE.Inventory"}}"></a>
+    <a data-tab="powers" class="spicyClass-icon spicyClass-icon-powers"
+       title="{{localize "SWADESPICE.Powers"}}"></a>
+    <a data-tab="effects" class="spicyClass-icon spicyClass-icon-effects"
+       title="{{localize "SWADESPICE.Effects"}}"></a>
+    <a data-tab="description" class="spicyClass-icon spicyClass-icon-description"
+       title="{{localize "SWADESPICE.Description"}}"></a>
 </nav>
 <main class="sheet-body">
-    <section class="tab-active" data-tab="quick_access">
-        Body of Quick Access tab
+    <section class="tab active" data-tab="summary">
+        <h2>{{localize "SWADESPICE.QuickAccess"}}</h2>
     </section>
     <section class="tab" data-tab="traits">
-        Body of traits tab
+        <h2>{{localize "SWADESPICE.Traits"}}</h2>
     </section>
     <section class="tab" data-tab="edges">
-        Body of the edges tab
+        <h2>{{localize "SWADESPICE.Edges"}}</h2>
     </section>
     <section class="tab" data-tab="hindrances">
-        Body of the hindrances tab
+        <h2>{{localize "SWADESPICE.Hindrances"}}</h2>
     </section>
     <section class="tab" data-tab="abilities">
-        Body of the abilities tab
+        <h2>{{localize "SWADESPICE.Abilities"}}</h2>
     </section>
     <section class="tab" data-tab="inventory">
-        Body of the inventory tab
+        <h2>{{localize "SWADESPICE.Inventory"}}</h2>
     </section>
     <section class="tab" data-tab="powers">
-        Body of the powers tab
-    </section>
+        <h2>{{localize "SWADESPICE.Powers"}}</h2>
+    </section></h2>
     <section class="tab" data-tab="effects">
-        Body of the effects tab
+        <h2>{{localize "SWADESPICE.Effects"}}</h2>
     </section>
     <section class="tab" data-tab="description">
-        Body of the description tab
+        <h2>{{localize "SWADESPICE.Description"}}</h2>
     </section>
 </main>
