--- a/swade-spices/css/main-body.css
+++ b/swade-spices/css/main-body.css
@@ -8,6 +8,7 @@
     --spicy-main-body-tab-icon-powers: url('/modules/swade-spices/assets/img/placeholder-tab-icon.png');
     --spicy-main-body-tab-icon-effects: url('/modules/swade-spices/assets/img/placeholder-tab-icon.png');
     --spicy-main-body-tab-icon-description: url('/modules/swade-spices/assets/img/placeholder-tab-icon.png');
+    --spicy-main-body-tab-background-color: #000000;
 }
 
 .spicyClass-navbar {
