tab text colour variable

--- a/swade-spices/css/main-body.css
+++ b/swade-spices/css/main-body.css
@@ -9,6 +9,7 @@
     --spicy-main-body-tab-icon-effects: url('/modules/swade-spices/assets/img/placeholder-tab-icon.png');
     --spicy-main-body-tab-icon-description: url('/modules/swade-spices/assets/img/placeholder-tab-icon.png');
     --spicy-main-body-tab-background-color: #000000;
+    --spicy-main-body-tab-text-color: #ffffff;
 }
 
 .spicyClass-navbar {
