--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -22,8 +22,16 @@
     <section class="tab active" data-tab="summary">
         <h2>{{localize "SWADESPICE.QuickAccess"}}</h2>
     </section>
-    <section class="tab" data-tab="traits">
+    <section class="tab spicyClass-tab" data-tab="traits">
         <h2>{{localize "SWADESPICE.Traits"}}</h2>
+        <div class="spicyClass-tab-container">
+            <div class="spicyClass-tab-column-left">
+                Column 1
+            </div>
+            <div class="spicyClass-tab-column-right">
+                Column 2
+            </div>
+        </div>
     </section>
     <section class="tab" data-tab="edges">
         <h2>{{localize "SWADESPICE.Edges"}}</h2>
@@ -39,7 +47,7 @@
     </section>
     <section class="tab" data-tab="powers">
         <h2>{{localize "SWADESPICE.Powers"}}</h2>
-    </section></h2>
+    </section>
     <section class="tab" data-tab="effects">
         <h2>{{localize "SWADESPICE.Effects"}}</h2>
     </section>
