Basic trait tables.

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -26,10 +26,10 @@
         <h2>{{localize "SWADESPICE.Traits"}}</h2>
         <div class="spicyClass-tab-container">
             <div class="spicyClass-tab-column-left">
-                Column 1
+                {{> "modules/swade-spices/templates/itemTables.html"}}
             </div>
             <div class="spicyClass-tab-column-right">
-                Column 2
+                {{> "modules/swade-spices/templates/itemTables.html"}}
             </div>
         </div>
     </section>
