Pass basic tab data to sheet.

--- a/swade-spices/templates/itemTables.html
+++ b/swade-spices/templates/itemTables.html
@@ -1,5 +1,5 @@
 <table class="spicyClass-item-table">
     <thead><tr>
-        <th></th><th>{{ group_name }}</th><th>{{ localize "SWADESPICE.Actions" }}</th>
+        <th><i class="fas fa-star"></i></th><th>{{ tab.name }}</th><th>{{ localize "SWADESPICE.Actions" }}</th>
     </tr></thead>
 </table>
