--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -26,10 +26,10 @@
         <h2>{{localize "SWADESPICE.Traits"}}</h2>
         <div class="spicyClass-tab-container">
             <div class="spicyClass-tab-column-left">
-                {{> "modules/swade-spices/templates/itemTables.html"}}
+                {{> "modules/swade-spices/templates/itemTables.html" tab=spicytabs.trait.left }}
             </div>
             <div class="spicyClass-tab-column-right">
-                {{> "modules/swade-spices/templates/itemTables.html"}}
+                {{> "modules/swade-spices/templates/itemTables.html" tab=spicytabs.trait.right }}
             </div>
         </div>
     </section>
