Basic styling of item tables.

--- a/swade-spices/css/item-tables.css
+++ b/swade-spices/css/item-tables.css
@@ -2,3 +2,11 @@
     width: 97%;
     margin: 5px;
 }
+
+.spicyClass-cell-actions {
+    text-align: right;
+}
+
+.spicyClass-cell-names {
+    padding-left: 2px;
+}
