--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -35,6 +35,13 @@
     </section>
     <section class="tab" data-tab="edges">
         <h2>{{localize "SWADESPICE.Edges"}}</h2>
+        <div class="spicyClass-tab-container">
+            <div class="spicyClass-tab-column-left">
+                {{> "modules/swade-spices/templates/itemTables.html" tab=spicytabs.edge }}
+            </div>
+            <div class="spicyClass-tab-column-right">
+            </div>
+        </div>
     </section>
     <section class="tab" data-tab="hindrances">
         <h2>{{localize "SWADESPICE.Hindrances"}}</h2>
