--- a/swade-spices/templates/itemTables.html
+++ b/swade-spices/templates/itemTables.html
@@ -7,8 +7,10 @@
             <td><i class="fas fa-star"></i></td>
             <td class="spicyClass-cell-names">{{ this.name }}</td>
             <td class="spicyClass-cell-actions">
-                <span class="spicyClass-clickable "><i class="fas fa-bolt"></i></span>
-                <span class="spicyClass-clickable "><i class="fas fa-dice-d6"></i></span>
+                {{# if this.rollable }}
+                    <span class="spicyClass-clickable "><i class="fas fa-bolt"></i></span>
+                    <span class="spicyClass-clickable "><i class="fas fa-dice-d6"></i></span>
+                {{/if}}
                 <span class="spicyClass-clickable "><i class="fas fa-comment-alt"></i></span>
             </td>
         </tr>
