--- a/swade-spices/templates/itemTables.html
+++ b/swade-spices/templates/itemTables.html
@@ -12,6 +12,7 @@
                     <span class="spicyClass-clickable "><i class="fas fa-dice-d6"></i></span>
                 {{/if}}
                 <span class="spicyClass-clickable "><i class="fas fa-comment-alt"></i></span>
+                <span class="spicyClass-clickable "><i class="fas fa-edit"></i></span>
             </td>
         </tr>
     {{/each}}
