--- a/swade-spices/templates/itemTables.html
+++ b/swade-spices/templates/itemTables.html
@@ -5,19 +5,25 @@
     {{# each tab.items }}
         <tr>
             <td><i class="fas fa-star"></i></td>
-            <td class="spicyClass-cell-names">{{ this.name }}</td>
+            <td class="spicyClass-cell-names spicyClass-clickable"
+                    data-item-id="{{this.item_id}}" data-item-type="{{this.item_type}}" data-click-type="edit">
+                {{ this.name }}
+            </td>
             <td class="spicyClass-cell-actions">
                 {{# if this.rollable }}
                     <span class="spicyClass-clickable" data-item-id="{{this.item_id}}" data-item-type="{{this.item_type}}"
                             data-click-type="fast_roll">
                         <i class="fas fa-bolt"></i>
                     </span>
-                    <span class="spicyClass-clickable"data-item-id="{{this.item_id}}" data-item-type="{{this.item_type}}"
+                    <span class="spicyClass-clickable" data-item-id="{{this.item_id}}" data-item-type="{{this.item_type}}"
                             data-click-type="roll">
                         <i class="fas fa-dice-d6"></i>
                     </span>
                 {{/if}}
-                <span class="spicyClass-clickable "><i class="fas fa-comment-alt"></i></span>
+                <span class="spicyClass-clickable" data-item-id="{{this.item_id}}" data-item-type="{{this.item_type}}"
+                            data-click-type="chat">
+                    <i class="fas fa-comment-alt"></i>
+                </span>
             </td>
         </tr>
     {{/each}}
