--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -45,6 +45,13 @@
     </section>
     <section class="tab" data-tab="hindrances">
         <h2>{{localize "SWADESPICE.Hindrances"}}</h2>
+        <div class="spicyClass-tab-container">
+            <div class="spicyClass-tab-column-left">
+                {{> "modules/swade-spices/templates/itemTables.html" tab=spicytabs.hindrance }}
+            </div>
+            <div class="spicyClass-tab-column-right">
+            </div>
+        </div>
     </section>
     <section class="tab" data-tab="abilities">
         <h2>{{localize "SWADESPICE.Abilities"}}</h2>
