--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -55,6 +55,13 @@
     </section>
     <section class="tab" data-tab="abilities">
         <h2>{{localize "SWADESPICE.Abilities"}}</h2>
+        <div class="spicyClass-tab-container">
+            <div class="spicyClass-tab-column-left">
+                {{> "modules/swade-spices/templates/itemTables.html" tab=spicytabs.ability }}
+            </div>
+            <div class="spicyClass-tab-column-right">
+            </div>
+        </div>
     </section>
     <section class="tab" data-tab="inventory">
         <h2>{{localize "SWADESPICE.Inventory"}}</h2>
