Basic inventory forms.

--- a/swade-spices/templates/mainBody.html
+++ b/swade-spices/templates/mainBody.html
@@ -65,6 +65,7 @@
     </section>
     <section class="tab" data-tab="inventory">
         <h2>{{localize "SWADESPICE.Inventory"}}</h2>
+        {{> "modules/swade-spices/templates/inventoryHeader.html" }}
     </section>
     <section class="tab" data-tab="powers">
         <h2>{{localize "SWADESPICE.Powers"}}</h2>
